--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "solidity-inbox ===============",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,12 @@
   "homepage": "https://github.com/DdZ-Fred/solidity-inbox#readme",
   "dependencies": {
     "ganache-cli": "^6.12.1",
-    "mocha": "^8.2.1",
+    "ganache-core": "^2.13.1",
     "solc": "^0.7.4",
     "web3": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.3"
   }
 }
