--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "ganache-cli": "^6.12.1",
     "ganache-core": "^2.13.1",
+    "rome": "^10.0.4-beta",
     "solc": "^0.7.4",
+    "unorm": "^1.6.0",
     "web3": "^1.3.0"
   },
   "devDependencies": {
