--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "solidity-inbox ===============",
   "main": "index.js",
   "scripts": {
+    "postinstall": "patch-package",
     "test": "jest"
   },
   "repository": {
@@ -19,6 +20,8 @@
   "dependencies": {
     "ganache-cli": "^6.12.1",
     "ganache-core": "^2.13.1",
+    "patch-package": "^6.2.2",
+    "postinstall-postinstall": "^2.1.0",
     "rome": "^10.0.4-beta",
     "solc": "^0.7.4",
     "unorm": "^1.6.0",
