--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solidity-inbox",
   "version": "1.0.0",
-  "description": "solidity-inbox ===============",
+  "description": "solidity-inbox",
   "main": "index.js",
   "scripts": {
     "postinstall": "patch-package",
