--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "ganache-core": "^2.13.1",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
-    "rome": "^10.0.4-beta",
     "solc": "^0.7.4",
-    "unorm": "^1.6.0",
     "web3": "^1.3.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-vue": "^7.1.0",
     "jest": "^26.6.3"
   }
 }
