--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "patch-package",
-    "test": "jest"
+    "compile": "truffle compile",
+    "test": "yarn compile && jest",
+    "test:watch": "yarn compile && jest --watch --verbose"
   },
   "repository": {
     "type": "git",
@@ -18,14 +20,19 @@
   },
   "homepage": "https://github.com/DdZ-Fred/solidity-inbox#readme",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.2.0",
+    "dotenv": "^8.2.0",
     "ganache-cli": "^6.12.1",
     "ganache-core": "^2.13.1",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
     "solc": "^0.7.4",
+    "truffle": "^5.1.53",
+    "uuid": "^8.3.1",
     "web3": "^1.3.0"
   },
   "devDependencies": {
+    "@openzeppelin/test-environment": "^0.1.6",
     "@types/jest": "^26.0.15",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
